# AITrade

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/commands/: analyze.md  commit-push.md  debug.md  new-feature.md  pr.md  simplify.md  test.md  verify.md
.github/workflows/: ci.yml
config/: __init__.py  constants.py  settings.py
deploy/: aitradew-paper.service  aitradew-retrain.service  aitradew-retrain.timer  aitradew-sudoers  aitradew-update.service  aitradew-update.timer  deploy.ps1  deploy.sh  enable_services.sh  health_check.sh  install.sh  retrain.sh  setup_vps.sh  update_data.sh
src/: __init__.py  backtest.py  cli.py  config.py  data_binance.py  features.py  labeling.py  metrics.py  optimize.py  resample.py  signals.py  train.py  utils.py
src/analysis/: __init__.py  mtf_analyzer.py
src/data/: __init__.py  binance.py  constants.py  fetcher.py  models.py  processor.py
src/live/: __init__.py  feature_buffer.py  paper_trader.py  position_manager.py  websocket_client.py
src/ml/: __init__.py  enhanced_predictor.py  predictor.py
src/notifications/: __init__.py  telegram.py
src/positions/: __init__.py  tracker.py
src/signals/: __init__.py  generator.py  models.py  simple_generator.py
tests/: __init__.py  conftest.py  test_backtest.py  test_data_binance.py  test_data_processor.py  test_features.py  test_improvements_561.py  test_indicators.py  test_labeling.py  test_positions.py  test_regressions.py  test_resample.py  test_signals.py  test_wicks.py
(+5 files in other folders)
